refactor: move be to v1
