# v1/docs/swagger.json
@@ -1,20 +1,13 @@
-// Code generated by swaggo/swag. DO NOT EDIT.
-
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "This is a sample server Portfolion server.",
+        "title": "Portfolion API",
         "contact": {},
-        "version": "{{.Version}}"
+        "version": "0.1"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "localhost:6161",
+    "basePath": "/api/v1",
     "paths": {
         "/auth": {
             "get": {
@@ -221,6 +214,38 @@ const docTemplate = `{
                 }
             }
         },
+        "/search/{symbol}": {
+            "get": {
+                "description": "Get Searched symbols",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Symbols"
+                ],
+                "summary": "Get Searched symbols",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Symbol",
+                        "name": "symbol",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Symbol"
+                        }
+                    }
+                }
+            }
+        },
         "/session": {
             "post": {
                 "description": "Creates a new user session or retrieves an existing session",
@@ -250,68 +275,6 @@ const docTemplate = `{
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.User"
-                        }
-                    }
-                }
-            }
-        },
-        "/symbols": {
-            "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Updates symbol values",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "symbols"
-                ],
-                "summary": "Update symbol values",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                }
-            },
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Creates a new symbol",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "symbols"
-                ],
-                "summary": "Create a new symbol",
-                "parameters": [
-                    {
-                        "description": "Symbol object",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Symbol"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Symbol"
                         }
                     }
                 }
@@ -362,22 +325,4 @@ const docTemplate = `{
             }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "0.1",
-	Host:             "localhost:6161",
-	BasePath:         "/api",
-	Schemes:          []string{},
-	Title:            "Portfolion API",
-	Description:      "This is a sample server Portfolion server.",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
